Image deletion support
