# swagger-output.json
@@ -477,6 +477,27 @@
         }
       }
     },
+    "/tasks/subtask/image/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/tasks/{taskId}/update-subtasks": {
       "put": {
         "description": "",
